// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tileListStore can notify changes applied to the list 1`] = `
TileList {
  "delegate": [Function],
  "emit": [Function],
  "list": [],
  "listens": [Function],
  "off": [Function],
  "on": [Function],
  "once": [Function],
  "specs": TileSpecifications {},
}
`;

exports[`tileListStore can notify changes applied to the list 2`] = `
TileList {
  "delegate": [Function],
  "emit": [Function],
  "list": [
    CurvedTileModel {
      "direction": "right",
      "id": "id-1",
      "ratio": 1,
      "specs": TileSpecifications {},
    },
  ],
  "listens": [Function],
  "off": [Function],
  "on": [Function],
  "once": [Function],
  "specs": TileSpecifications {},
}
`;

exports[`tileListStore can notify changes applied to the list 3`] = `
TileList {
  "delegate": [Function],
  "emit": [Function],
  "list": [
    CurvedTileModel {
      "direction": "right",
      "id": "id-2",
      "ratio": 1,
      "specs": TileSpecifications {},
    },
    CurvedTileModel {
      "direction": "right",
      "id": "id-1",
      "ratio": 1,
      "specs": TileSpecifications {},
    },
  ],
  "listens": [Function],
  "off": [Function],
  "on": [Function],
  "once": [Function],
  "specs": TileSpecifications {},
}
`;

exports[`tileListStore can notify changes applied to the list 4`] = `
TileList {
  "delegate": [Function],
  "emit": [Function],
  "list": [
    CurvedTileModel {
      "direction": "right",
      "id": "id-1",
      "ratio": 1,
      "specs": TileSpecifications {},
    },
  ],
  "listens": [Function],
  "off": [Function],
  "on": [Function],
  "once": [Function],
  "specs": TileSpecifications {},
}
`;

exports[`tileListStore can notify changes applied to the list 5`] = `
TileList {
  "delegate": [Function],
  "emit": [Function],
  "list": [
    StraightTileModel {
      "direction": "right",
      "id": "id-3",
      "ratio": 1,
      "specs": TileSpecifications {},
    },
  ],
  "listens": [Function],
  "off": [Function],
  "on": [Function],
  "once": [Function],
  "specs": TileSpecifications {},
}
`;

exports[`tileListStore can notify changes applied to the list 6`] = `
TileList {
  "delegate": [Function],
  "emit": [Function],
  "list": [],
  "listens": [Function],
  "off": [Function],
  "on": [Function],
  "once": [Function],
  "specs": TileSpecifications {},
}
`;

exports[`tileListStore can notify changes applied to the list 7`] = `
TileList {
  "delegate": [Function],
  "emit": [Function],
  "list": [
    StraightTileModel {
      "direction": "right",
      "id": "id-4",
      "ratio": 1,
      "specs": TileSpecifications {},
    },
  ],
  "listens": [Function],
  "off": [Function],
  "on": [Function],
  "once": [Function],
  "specs": TileSpecifications {},
}
`;

exports[`tileListStore can notify changes applied to the list 8`] = `
TileList {
  "delegate": [Function],
  "emit": [Function],
  "list": [
    StraightTileModel {
      "direction": "right",
      "id": "id-4",
      "ratio": 1,
      "specs": TileSpecifications {},
    },
  ],
  "listens": [Function],
  "off": [Function],
  "on": [Function],
  "once": [Function],
  "specs": TileSpecifications {},
}
`;

exports[`tileListStore can notify changes applied to the list 9`] = `
TileList {
  "delegate": [Function],
  "emit": [Function],
  "list": [
    StraightTileModel {
      "direction": "right",
      "id": "id-4",
      "ratio": 1,
      "specs": TileSpecifications {},
    },
  ],
  "listens": [Function],
  "off": [Function],
  "on": [Function],
  "once": [Function],
  "specs": TileSpecifications {},
}
`;
